--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.6'
     compile 'com.google.code.gson:gson:2.8.0'
     compile files('./src/libs/3601-lab3-todos.jar')
+    compile 'org.mongodb:mongodb-driver:3.4.2'
 
     testCompile 'junit:junit:4.12'
 }
