--- a/client/build.gradle
+++ b/client/build.gradle
@@ -13,8 +13,8 @@ node {
     nodeModulesDir = file("${project.projectDir}/")
 }
 
-task runClient(type: Exec) {
-    executable "node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+task runClient(type: NodeTask) {
+    script = file("node_modules/webpack-dev-server/bin/webpack-dev-server.js")
     args = ["--config", "./webpack.dev.js", "--colors"]
 }
 runClient.dependsOn(yarn_install)
