Add webpack config for non-dev build
Also add gradle task for building client without running
dev server.

This is a start, but the way our gradle tasks (with relation to
the client) work should be reorganized. We also need to
incorporate this into the top-level build task still.

Issue: #3

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -20,3 +20,10 @@ task runClient(type: NodeTask) {
 runClient.dependsOn(yarn_install)
 task runClientTests() {}
 runClientTests.dependsOn(yarn_run_test)
+
+
+task buildProdClient(type: NodeTask) {
+    script = file("node_modules/webpack/bin/webpack.js")
+    args = ["--config", "./webpack.prod.js", "--colors"] 
+}
+buildProdClient.dependsOn(yarn_install)
