--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
 task runWithTests {
     group = "application"
+    description = "Runs the server as a JVM application after testing both it and the client"
 }
 
 runWithTests.dependsOn test
