--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'org.mongodb:mongodb-driver:3.4.2'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.github.stefanbirkner:system-rules:1.16.0'
 }
 
 distributions {
