--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile 'org.mongodb:mongodb-driver:3.4.2'
     compile 'org.apache.poi:poi-ooxml:3.15'
     //compile 'sun.text.normalizer.UTF16: '
+    compile 'com.google.zxing:core:2.2'
+    compile 'com.google.zxing:javase:2.2'
 
     testCompile 'junit:junit:4.12'
 }
