--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile files('./src/libs/3601-lab3-todos.jar')
     compile 'org.mongodb:mongodb-driver:3.4.2'
     compile 'org.apache.poi:poi-ooxml:3.15'
+    compile 'joda-time:joda-time:2.9.9'
+
     //compile 'sun.text.normalizer.UTF16: '
 
     testCompile 'junit:junit:4.12'
