--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser-dynamic": "^2.4.6",
     "@angular/router": "^3.4.6",
     "@angular/forms": "^2.4.7",
+    "angular2-bootstrap-confirm": "^1.0.4",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.26.1",
     "es6-shim": "^0.35.3",
