Customize script produced by `./gradlew build`
This makes the script record its process id (pid) to
a file so that we can easily shutdown the server
from other scripts (e.g. scripts that restart the server).

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -60,4 +60,5 @@ test.dependsOn(":client:runClientTests")
 // annoying for the static web artifacts, but this does work.
 startScripts {
     classpath += files('client')
+    unixStartScriptGenerator.template = project.resources.text.fromFile("script-template")
 }
